# analysis-and-prediction-of-real-estate-transaction-data-fortaleza

./: .gitignore  analysis.ipynb  readme.MD
Documentos/TIago/DISCIPLINAS/semestre-9/MINERACAO/atividade-1/: analysis.ipynb
Documentos/TIago/pdf&ela/sprint-9/new-branch/profilling-docling/: .gitignore  .pre-commit-config.yaml  README.md  analysys.py  full.json  imgs.json  main.py  output.html  pyproject.toml  tables.json  texts.json  utils.py
Documentos/TIago/pdf&ela/sprint-9/new-branch/profilling-docling/jsons/: 1.json  2.json  3.json  4.json
Documentos/TIago/pdf&ela/sprint-9/new-branch/profilling-docling/src/document_relayout/core/: hp_document.py
Documentos/TIago/pdf&ela/sprint-9/new-branch/profilling-docling/src/document_relayout/core/backend/: base_engine.py  process_file.py  yolo_engine.py
Documentos/TIago/pdf&ela/sprint-9/new-branch/profilling-docling/src/document_relayout/core/backend/docling/: cotent_extractor.py  docling_engine.py
Documentos/TIago/pdf&ela/sprint-9/new-branch/profilling-docling/src/document_relayout/core/backend/types/: box.py
Documentos/TIago/pdf&ela/sprint-9/new-branch/profilling-docling/src/document_relayout/core/backend/types/data_structures/: interval_tree.py  spatial_cluster_index.py  union_find.py
Documentos/TIago/pdf&ela/sprint-9/new-branch/profilling-docling/src/document_relayout/core/backend/yolo/: classify_image.py  gen_box_images.py
Documentos/TIago/pdf&ela/sprint-9/new-branch/profilling-docling/src/document_relayout/core/content_processor/: base_formatter.py  html_formatter.py  json_formatter.py
Documentos/TIago/pdf&ela/sprint-9/new-branch/profilling-docling/src/document_relayout/core/layout_engines/: sequential_text_relayout.py
Documentos/TIago/pdf&ela/sprint-9/new-branch/profilling-docling/src/document_relayout/core/postprocess/: postprocess.py  remove_by_confidence.py  remove_key_value_region.py  remove_overlapping.py  sorting.py
Documentos/TIago/pdf&ela/sprint-9/new-branch/profilling-docling/txts/: 1.txt  2.txt  3.txt  4.txt
